enhancements with Bootstrap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>The Video Poker</title>
     <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.7" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,12 +12,93 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=ZCOOL+XiaoWei&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
     <p id="header"><b>Video Poker</b></p>
+    <div class="gameStatusMessage" id="gameStatusMessageId">
+      Press deal to start.
+    </div>
+    <div class="cardsContainerCSS">
+      <div class="cardWithHoldIndicatorCSS">
+        <div id="card0"></div>
+        <div class="holdIndicator" id="hold0"></div>
+      </div>
+      <div class="cardWithHoldIndicatorCSS">
+        <div id="card1"></div>
+        <div class="holdIndicator" id="hold1"></div>
+      </div>
+      <div class="cardWithHoldIndicatorCSS">
+        <div id="card2"></div>
+        <div class="holdIndicator" id="hold2"></div>
+      </div>
+      <div class="cardWithHoldIndicatorCSS">
+        <div id="card3"></div>
+        <div class="holdIndicator" id="hold3"></div>
+      </div>
+      <div class="cardWithHoldIndicatorCSS">
+        <div id="card4"></div>
+        <div class="holdIndicator" id="hold4"></div>
+      </div>
+    </div>
+
+    <div class="creditMessage" id="creditMessageId"></div>
+
+    <div class="bottomSection">
+      <button id="actionBtn">DEAL</button>
+      <button id="payTable" data-toggle="modal" data-target="#exampleModal">
+        PAY TABLE
+      </button>
+
+      <!-- Button trigger modal -->
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Pay Table</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" id="modal-body"></div>
+            
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Import program logic -->
     <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
